<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ecdhActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/ecdhEncrypt"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="encrypt"
            android:text="@string/encrypt" />

        <Button
            android:id="@+id/ecdhDecrypt"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="decrypt"
            android:text="@string/decrypt" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSend"
            android:text="@string/send" />
    </LinearLayout>

    <Button
        android:id="@+id/resetPrivateKeyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="resetPrivateKey"
        android:text="@string/reset_private_key"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/copyPubkeyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="copyPubKey"
        android:text="@string/copy_public_key"
        app:layout_constraintEnd_toStartOf="@+id/resetPrivateKeyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetEcdhButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="resetExchange"
        android:text="@string/reset_ecdh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/resetPrivateKeyButton"
        app:layout_constraintTop_toBottomOf="@+id/resetPrivateKeyButton" />

    <EditText
        android:id="@+id/ecworkingText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/work_area_hint"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetEcdhButton" />

    <Button
        android:id="@+id/doECDHButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="doExchange"
        android:text="@string/do_ecdh"
        app:layout_constraintEnd_toStartOf="@+id/resetEcdhButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyPubkeyButton" />

</androidx.constraintlayout.widget.ConstraintLayout>